--- a/angular.json
+++ b/angular.json
@@ -26,15 +26,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "_redirects",
-                "input": "src",
-                "output": "/"
-              }
-            ],
+            "assets": ["src/favicon.ico", "src/assets", "_redirects"],
             "styles": ["src/styles.scss"],
             "scripts": []
           },
