--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "angular2-text-mask": "^9.0.0",
+    "ng-zorro-antd": "^13.4.0",
     "ng2-currency-mask": "^13.0.3",
     "ngx-mask": "^12.0.0",
     "rxjs": "~7.5.0",
